@@ -43,6 +43,38 @@ val adaptiveScroogeTestThriftSettings = Seq(
   ScroogeRunner.genAdaptiveScroogeTestThriftTask
 )
 
+def gcJavaOptions: Seq[String] = {
+  Seq(
+    "-XX:+UseParNewGC",
+    "-XX:+UseConcMarkSweepGC",
+    "-XX:+CMSParallelRemarkEnabled",
+    "-XX:+CMSClassUnloadingEnabled",
+    "-XX:ReservedCodeCacheSize=128m",
+    "-XX:SurvivorRatio=128",
+    "-XX:MaxTenuringThreshold=0",
+    "-Xss8M",
+    "-Xms512M",
+    "-Xmx2G"
+  )
+}
+
+def travisTestJavaOptions: Seq[String] = {
+  // We have some custom configuration for the Travis environment
+  // https://docs.travis-ci.com/user/environment-variables/#default-environment-variables
+  val travisBuild = sys.env.getOrElse("TRAVIS", "false").toBoolean
+  if (travisBuild) {
+    Seq(
+      "-DSKIP_FLAKY=true",
+      "-DSKIP_FLAKY_TRAVIS=true",
+      "-Dsbt.log.noformat=true"
+    )
+  } else {
+    Seq(
+      "-DSKIP_FLAKY=true"
+    )
+  }
+}
+
 val sharedSettingsWithoutScalaVersion = Seq(
   version := releaseVersion,
   organization := "com.twitter",
@@ -58,8 +90,20 @@ val sharedSettingsWithoutScalaVersion = Seq(
   ),
 
   ScoverageKeys.coverageHighlighting := true,
+  
+  fork in Test := true, // We have to fork to get the JavaOptions
 
   parallelExecution in Test := false,
+
+  javaOptions ++= Seq(
+    "-Djava.net.preferIPv4Stack=true",
+    "-XX:+AggressiveOpts",
+    "-server"
+  ),
+
+  javaOptions ++= gcJavaOptions,
+
+  javaOptions in Test ++= travisTestJavaOptions,
 
   // -a: print stack traces for failing asserts
   testOptions += Tests.Argument(TestFrameworks.JUnit, "-a"),
